# yugioh-ai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  PybindHelper.cmake  README.md  cli.py  debug_duel.py  dmc.py  duel_build.py  eval.py  ppo.py  requirements.txt  setup.py
cmake/: Helper.cmake
deck/: BlueEyes.ydk  DarkYugi.ydk  Gold.ydk  GoldO.ydk  Swordsoul.ydk
docs/: features.md  support.md
scratch/: refactor.py  test_agent.py  test_env.py  test_envpool.py  test_play.py  test_vec_env.py
scripts/: dmc.py  eval.py  generate_embedding.py  play.py  random_run.py  run_prof.py
ygo/: __init__.py  card.py  constants.py  duel.py  duel_reader.py  embed.py  exceptions.py  globals.py  language_handler.py  llm.py  ocgcore.cpp  utils.py
ygo/envs/: __init__.py  card.py  db.py  duel.py  glb.py  strings.py  ygo.py
ygo/game/: card.py  duel.py  globals.py  language_handler.py
ygo/message_handlers/: act_on_card.py  announce_attrib.py  announce_card.py  announce_number.py  announce_race.py  attack.py  battle.py  battle_activate.py  battle_attack.py  become_target.py  begin_damage.py  card_hint.py  chain_solved.py  chaining.py  confirm_cards.py  counters.py  damage.py  decktop.py  display_battle_menu.py  draw.py  end_damage.py  equip.py  field_disabled.py  flipsummoning.py  hint.py  idle.py  idle_action.py  lpupdate.py  move.py  new_turn.py  pay_lpcost.py  phase.py  pos_change.py  recover.py  reversedeck.py  select_battlecmd.py  select_card.py  select_chain.py  select_counter.py  select_effectyn.py  (+15 more)
ygo/message_handlers_a/: announce_number.py  announce_race.py  (+29 more)
(+99 files in other folders)
